[package]
name = "linkedlist"
version = "0.1.0"
edition = "2021"
authors = ["Alexandros Platanios <alexandrosplatanios30@gmail.com>"]
rust-version = "1.68.0"
license = "MIT"
keywords = ["linkedlist", "data structure", "data", "structure"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
