[package]
name = "linked_lista"
version = "0.1.5"
edition = "2021"
authors = ["Alexandros Platanios <alexandrosplatanios15@gmail.com>"]
rust-version = "1.68.0"
license = "MIT"
keywords = ["linkedlist", "data", "structure", "datastructure"]
description = "LinkedList data structure"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
